--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "cgit",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "git cli",
   "main": "cgit.js",
+  "bin" : {"cgit": "./bin/cgit"},
   "directories": {
     "test": "test"
   },
@@ -12,6 +13,9 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:spricity/cgit.git"
+  },
+  "dependencies": {
+    "debug":"0.7.0"
   },
   "keywords": [
     "git",
